--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,6 +1,6 @@
 {
   "name": "chinaexpress_frontend",
-  "version": "0.1.0",
+  "version": "v0.0.2",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.3",
