--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,9 +11,11 @@
     "html-react-parser": "^1.4.9",
     "jquery": "^3.6.0",
     "lodash": "^4.17.21",
+    "moment": "^2.29.1",
     "perfect-scrollbar": "^1.5.5",
     "popper.js": "^1.16.1",
     "react": "^17.0.2",
+    "react-datetime": "^3.1.1",
     "react-dom": "^17.0.2",
     "react-inner-image-zoom": "^3.0.0",
     "react-lazyload": "^3.2.0",
