--- a/backend/.env.example
+++ b/backend/.env.example
@@ -3,7 +3,13 @@ APP_NAME="Chinaexpress"
 APP_ENV=local
 APP_KEY=base64:us1Go121NG/Z30XdciXiVaetlO6iInFdNiueSiAy2Eg=
 APP_DEBUG=true
-APP_URL=http://127.0.0.1:8000
+APP_URL=http://127.0.0.1:8000/manage
+ASSET_URL=http://127.0.0.1:8000/manage
+FRONTEND_URL=http://localhost:3000
+
+
+
+
 APP_LOCALE=en
 APP_FALLBACK_LOCALE=en
 APP_LOCALE_PHP=en_US
@@ -150,11 +156,11 @@ SANCTUM_STATEFUL_DOMAINS=
 # bkash payment gateway
 #sandbox or live
 BKASH_CHECKOUT_SANDBOX=sandbox
-BKASH_SHOW_TOKEN_INFO=""
-BKASH_CHECKOUT_APP_KEY="7epj60ddf7id0chhcm3vkejtab"
-BKASH_CHECKOUT_APP_SECRET="18mvi27h9l38dtdv110rq5g603blk0fhh5hg46gfb27cp2rbs66f"
-BKASH_CHECKOUT_USER_NAME="sandboxTokenizedUser01"
-BKASH_CHECKOUT_PASSWORD="sandboxTokenizedUser12345"
+BKASH_BASE_URL="https://checkout.sandbox.bka.sh/v1.2.0-beta"
+BKASH_CHECKOUT_APP_KEY="5nej5keguopj928ekcj3dne8p"
+BKASH_CHECKOUT_APP_SECRET="1honf6u1c56mqcivtc9ffl960slp4v2756jle5925nbooa46ch62"
+BKASH_CHECKOUT_USER_NAME="testdemo"
+BKASH_CHECKOUT_PASSWORD="test%#de23@msdao"
 
 
 # nagad payment intregration
