--- a/backend/package.json
+++ b/backend/package.json
@@ -7,12 +7,12 @@
   "homepage": "https://www.chinaexpress.com.bd",
   "scripts": {
     "dev": "cross-var $npm_execpath run development",
-    "development": "cross-env NODE_ENV=development webpack --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js",
+    "development": "cross-env NODE_ENV=development webpack --progress  --config=node_modules/laravel-mix/setup/webpack.config.js",
     "watch": "cross-var $npm_execpath run development -- --watch",
     "watch-poll": "cross-var $npm_execpath run watch -- --watch-poll",
     "hot": "cross-env NODE_ENV=development webpack-dev-server --inline --hot --config=node_modules/laravel-mix/setup/webpack.config.js",
     "prod": "cross-var $npm_execpath run production",
-    "production": "cross-env NODE_ENV=production webpack --no-progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js",
+    "production": "cross-env NODE_ENV=production webpack --no-progress --config=node_modules/laravel-mix/setup/webpack.config.js",
     "test": "cross-env NODE_ENV=test jest",
     "tdd": "cross-var $npm_execpath run test -- --watch --notify"
   },
@@ -21,11 +21,11 @@
     "axios": "^0.19",
     "babel-core": "^7.0.0-bridge.0",
     "babel-jest": "^24.8.0",
-    "cross-env": "^7.0",
+    "cross-env": "^7.0.3",
     "cross-var": "^1.1.0",
     "jest": "^24.8.0",
     "jquery": "^3.2",
-    "laravel-mix": "^5.0.1",
+    "laravel-mix": "^6.0.43",
     "lodash": "^4.17.13",
     "pace": "github:HubSpot/pace#v1.0.2",
     "perfect-scrollbar": "^1.4.0",
@@ -36,7 +36,8 @@
     "sass": "^1.45.2",
     "sass-loader": "^8.0.0",
     "sweetalert2": "^9.3.5",
-    "vue-template-compiler": "^2.6.14"
+    "vue-template-compiler": "^2.6.14",
+    "webpack-cli": "^4.9.2"
   },
   "browserslist": {
     "development": "last 1 version",
