--- a/frontend/.env.production
+++ b/frontend/.env.production
@@ -1,3 +1,3 @@
 REACT_APP_WEBSITE_NAME='ChiaExpress'
-REACT_APP_API_ENDPOINT=https://www.chinaexpress.com.bd/manage/api/v1/
-REACT_APP_ASSET_ENDPOINT=https://www.chinaexpress.com.bd/manage
+REACT_APP_API_ENDPOINT=https://www.chinaexpress.com.bd/admin/api/v1/
+REACT_APP_ASSET_ENDPOINT=https://www.chinaexpress.com.bd/admin
