--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
     "react": "^17.0.2",
     "react-datetime": "^3.1.1",
     "react-dom": "^17.0.2",
+    "react-helmet": "^6.1.0",
     "react-inner-image-zoom": "^3.0.0",
     "react-lazyload": "^3.2.0",
     "react-loading-skeleton": "^3.0.3",
