--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,14 +1,14 @@
 APP_READ_ONLY=false
-APP_NAME="Chinaexpress"
+APP_NAME="ChinaExpress"
 APP_ENV=local
 APP_KEY=base64:us1Go121NG/Z30XdciXiVaetlO6iInFdNiueSiAy2Eg=
 APP_DEBUG=true
-APP_URL=http://127.0.0.1:8000/manage
-ASSET_URL=http://127.0.0.1:8000/manage
+APP_URL=http://127.0.0.1:8000
+ASSET_URL=http://127.0.0.1:8000
+
 FRONTEND_URL=http://localhost:3000
-
-
-
+# SESSION_DOMAIN=localhost:3000
+# SANCTUM_STATEFUL_DOMAINS=localhost:3000
 
 APP_LOCALE=en
 APP_FALLBACK_LOCALE=en
@@ -42,7 +42,7 @@ MAIL_DRIVER=mailjet
 MAILJET_APIKEY="ef8d31152ffec129de1e72fa75b5dd6a"
 MAILJET_APISECRET="f7d0d6dc6ecfee0ac845ac99b8fd516e"
 MAIL_FROM_ADDRESS="info@chinaexpress.com.bd"
-MAIL_FROM_NAME="${APP
+MAIL_FROM_NAME="${APP_NAME}"
 
 
 AWS_ACCESS_KEY_ID=
@@ -83,8 +83,11 @@ INVISIBLE_RECAPTCHA_DEBUG=false
 
 
 # otc instanceKey
-INSTANCE_KEY="2ee60e0a-0c3f-440f-83b7-7e29a43df4d6"
-#INSTANCE_KEY="opendemo"
+
+# Rapid API INSTANCE
+RAPID_API_BASE_URL="https://magic-aliexpress1.p.rapidapi.com/api"
+RAPID_API_HOST="magic-aliexpress1.p.rapidapi.com"
+RAPID_API_KEY="a36081fa6bmsh69d1ef4b64f4baep164d70jsnfd2057590bb4"
 
 
 # ADN SMS API
