ali product dev progress

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -32,6 +32,7 @@
     "sass": "^1.49.9",
     "sass-loader": "^12.6.0",
     "sweetalert": "^2.1.2",
+    "sweetalert2": "^11.4.8",
     "tiny-slider-react": "^0.5.4",
     "web-vitals": "^2.1.4"
   },
