--- a/backend/composer.json
+++ b/backend/composer.json
@@ -31,12 +31,12 @@
         "livewire/livewire": "^1.3",
         "maatwebsite/excel": "^3.1",
         "mailjet/laravel-mailjet": "^3.0",
+        "paquettg/php-html-parser": "^3.1",
         "phpoffice/phpspreadsheet": "^1.16",
         "rappasoft/laravel-livewire-tables": "^0.4",
         "spatie/laravel-html": "^2.22",
         "spatie/laravel-permission": "^3.0",
-        "torann/geoip": "^1.0",
-        "voku/simple_html_dom": "^4.8"
+        "torann/geoip": "^1.0"
     },
     "require-dev": {
         "barryvdh/laravel-debugbar": "^3.2",
