--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "moment": "^2.29.1",
     "perfect-scrollbar": "^1.5.5",
     "popper.js": "^1.16.1",
+    "query-string": "^7.1.1",
     "react": "^17.0.2",
     "react-datetime": "^3.1.1",
     "react-dom": "^17.0.2",
