--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,6 +1,6 @@
 {
   "name": "chinaexpress_frontend",
-  "version": "v1.2.0",
+  "version": "v1.2.1",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.3",
@@ -30,6 +30,7 @@
     "react-responsive": "^9.0.0-beta.6",
     "react-router-dom": "^5.3.0",
     "react-scripts": "5.0.0",
+    "react-toastify": "^9.0.1",
     "sass": "^1.49.9",
     "sass-loader": "^12.6.0",
     "sweetalert2": "^11.4.8",
