--- a/frontend/public/assets/plugins/fontello/config.json
+++ b/frontend/public/assets/plugins/fontello/config.json
@@ -559,7 +559,7 @@
     {
       "uid": "8dbfa072cdf69ac6e9874f79083f3e72",
       "css": "shop",
-      "code": 59444,
+      "code": 59445,
       "src": "custom_icons",
       "selected": true,
       "svg": {
@@ -568,6 +568,20 @@
       },
       "search": [
         "shop"
+      ]
+    },
+    {
+      "uid": "54026d00d73ac8ba288eee0e239568a0",
+      "css": "play-circle",
+      "code": 59446,
+      "src": "custom_icons",
+      "selected": true,
+      "svg": {
+        "path": "M500 937.5A437.5 437.5 0 1 1 500 62.5 437.5 437.5 0 0 1 500 937.5ZM500 1000A500 500 0 1 0 500 0 500 500 0 0 0 500 1000ZM391.9 315.9A31.3 31.3 0 0 1 424.4 318.3L643.2 474.6A31.3 31.3 0 0 1 643.2 525.4L424.4 681.7A31.3 31.3 0 0 1 375 656.3V343.8A31.3 31.3 0 0 1 391.9 315.9Z",
+        "width": 1000
+      },
+      "search": [
+        "play-circle-round"
       ]
     }
   ]
