local development on going

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -85,9 +85,14 @@ INVISIBLE_RECAPTCHA_DEBUG=false
 # otc instanceKey
 
 # Rapid API INSTANCE
-RAPID_API_BASE_URL="https://magic-aliexpress1.p.rapidapi.com/api"
-RAPID_API_HOST="magic-aliexpress1.p.rapidapi.com"
-RAPID_API_KEY="a36081fa6bmsh69d1ef4b64f4baep164d70jsnfd2057590bb4"
+# RAPID_API_BASE_URL="https://magic-aliexpress1.p.rapidapi.com/api"
+# RAPID_API_HOST="magic-aliexpress1.p.rapidapi.com"
+# RAPID_API_KEY="a7abe3af33msh948e49d60b78328p1a0438jsncc654a1892d0"
+
+# Ali Express
+RAPID_API_BASE_URL="https://aliexpress-datahub.p.rapidapi.com/api"
+RAPID_API_HOST="aliexpress-datahub.p.rapidapi.com"
+RAPID_API_KEY="b0cbd1be8bmsh09fd5f1dba01f32p135aeejsnf76c84d588a4"
 
 
 # ADN SMS API
