wallet dev progress

--- a/frontend/public/assets/plugins/fontello/config.json
+++ b/frontend/public/assets/plugins/fontello/config.json
@@ -583,6 +583,12 @@
       "search": [
         "play-circle-round"
       ]
+    },
+    {
+      "uid": "5408be43f7c42bccee419c6be53fdef5",
+      "css": "doc-text",
+      "code": 61686,
+      "src": "fontawesome"
     }
   ]
 }
