--- a/frontend/public/assets/plugins/fontello/config.json
+++ b/frontend/public/assets/plugins/fontello/config.json
@@ -515,80 +515,16 @@
       "src": "entypo"
     },
     {
-      "uid": "6ab5e0525d6dc0a1edf77d951d030055",
-      "css": "headset",
-      "code": 59436,
-      "src": "custom_icons",
-      "selected": true,
-      "svg": {
-        "path": "M500 62.5A312.5 312.5 0 0 0 187.5 375V437.5H250A62.5 62.5 0 0 1 312.5 500V687.5A62.5 62.5 0 0 1 250 750H187.5A62.5 62.5 0 0 1 125 687.5V375A375 375 0 1 1 875 375V750A156.3 156.3 0 0 1 718.8 906.3H585.4A62.5 62.5 0 0 1 531.3 937.5H468.8A62.5 62.5 0 1 1 468.8 812.5H531.3A62.5 62.5 0 0 1 585.4 843.8H718.8A93.8 93.8 0 0 0 812.5 750H750A62.5 62.5 0 0 1 687.5 687.5V500A62.5 62.5 0 0 1 750 437.5H812.5V375A312.5 312.5 0 0 0 500 62.5Z",
-        "width": 1000
-      },
-      "search": [
-        "headset"
-      ]
-    },
-    {
-      "uid": "e4a051e2ad6440cdbf27b23ffeeecfff",
-      "css": "messenger",
+      "uid": "628e5fc59fc5965a6b91189467b037d5",
+      "css": "heart-3",
       "code": 59437,
-      "src": "custom_icons",
-      "selected": true,
-      "svg": {
-        "path": "M0 485C0 206.3 218.3 0 500 0S1000 206.3 1000 485 781.7 970 500 970C449.4 970 400.9 963.3 355.3 950.8A39.9 39.9 0 0 0 328.6 952.7L229.3 996.6A40 40 0 0 1 173.2 961.2L170.4 872.2A39.9 39.9 0 0 0 157 843.7C59.8 756.8 0 630.8 0 485ZM346.6 393.8L199.8 626.8C185.7 649.2 213.1 674.4 234.2 658.4L392 538.7A30 30 0 0 1 428.1 538.6L544.9 626.2A75 75 0 0 0 653.4 606.2L800.3 373.2C814.4 350.8 786.9 325.6 765.8 341.6L608 461.3A30 30 0 0 1 571.9 461.4L455.1 373.8A75 75 0 0 0 346.6 393.8Z",
-        "width": 1000
-      },
-      "search": [
-        "messenger"
-      ]
+      "src": "elusive"
     },
     {
-      "uid": "aac80d62b1ff70045b8562c7aeca405f",
-      "css": "shop-window",
-      "code": 59438,
-      "src": "custom_icons",
-      "selected": true,
-      "svg": {
-        "path": "M185.6 84.4A62.5 62.5 0 0 1 233.1 62.5H766.9A62.5 62.5 0 0 1 814.4 84.4L977.4 274.6A93.8 93.8 0 0 1 1000 335.6V351.6A148.4 148.4 0 0 1 734.4 442.7 148.2 148.2 0 0 1 617.2 500 148.1 148.1 0 0 1 500 442.7 148.1 148.1 0 0 1 382.8 500 148.1 148.1 0 0 1 265.6 442.7 148.4 148.4 0 0 1 0 351.6V335.6A93.8 93.8 0 0 1 22.6 274.6L185.7 84.3ZM296.9 351.6A85.9 85.9 0 0 0 468.8 351.6 31.3 31.3 0 0 1 531.3 351.6 85.9 85.9 0 0 0 703.1 351.6 31.3 31.3 0 0 1 765.6 351.6 85.9 85.9 0 1 0 937.5 351.6V335.6A31.3 31.3 0 0 0 930 315.3L766.9 125H233.1L70 315.3A31.3 31.3 0 0 0 62.5 335.6V351.6A85.9 85.9 0 0 0 234.4 351.6 31.3 31.3 0 0 1 296.9 351.6ZM93.8 531.3A31.3 31.3 0 0 1 125 562.5V937.5H875V562.5A31.3 31.3 0 0 1 937.5 562.5V937.5H968.8A31.3 31.3 0 0 1 968.8 1000H31.3A31.3 31.3 0 0 1 31.3 937.5H62.5V562.5A31.3 31.3 0 0 1 93.8 531.3ZM218.8 562.5A31.3 31.3 0 0 1 250 593.8V812.5H750V593.8A31.3 31.3 0 0 1 812.5 593.8V812.5A62.5 62.5 0 0 1 750 875H250A62.5 62.5 0 0 1 187.5 812.5V593.8A31.3 31.3 0 0 1 218.8 562.5Z",
-        "width": 1000
-      },
-      "search": [
-        "shop-window"
-      ]
-    },
-    {
-      "uid": "8dbfa072cdf69ac6e9874f79083f3e72",
-      "css": "shop",
-      "code": 59445,
-      "src": "custom_icons",
-      "selected": true,
-      "svg": {
-        "path": "M185.6 84.4A62.5 62.5 0 0 1 233.1 62.5H766.9A62.5 62.5 0 0 1 814.4 84.4L977.4 274.6A93.8 93.8 0 0 1 1000 335.6V351.6A148.4 148.4 0 0 1 734.4 442.7 148.2 148.2 0 0 1 617.2 500 148.1 148.1 0 0 1 500 442.7 148.1 148.1 0 0 1 382.8 500 148.1 148.1 0 0 1 265.6 442.7 148.4 148.4 0 0 1 0 351.6V335.6A93.8 93.8 0 0 1 22.6 274.6L185.7 84.3ZM296.9 351.6A85.9 85.9 0 0 0 468.8 351.6 31.3 31.3 0 0 1 531.3 351.6 85.9 85.9 0 0 0 703.1 351.6 31.3 31.3 0 0 1 765.6 351.6 85.9 85.9 0 1 0 937.5 351.6V335.6A31.3 31.3 0 0 0 930 315.3L766.9 125H233.1L70 315.3A31.3 31.3 0 0 0 62.5 335.6V351.6A85.9 85.9 0 0 0 234.4 351.6 31.3 31.3 0 0 1 296.9 351.6ZM93.8 531.3A31.3 31.3 0 0 1 125 562.5V937.5H187.5V625A62.5 62.5 0 0 1 250 562.5H437.5A62.5 62.5 0 0 1 500 625V937.5H875V562.5A31.3 31.3 0 0 1 937.5 562.5V937.5H968.8A31.3 31.3 0 0 1 968.8 1000H31.3A31.3 31.3 0 0 1 31.3 937.5H62.5V562.5A31.3 31.3 0 0 1 93.8 531.3ZM250 937.5H437.5V625H250V937.5ZM562.5 625A62.5 62.5 0 0 1 625 562.5H750A62.5 62.5 0 0 1 812.5 625V812.5A62.5 62.5 0 0 1 750 875H625A62.5 62.5 0 0 1 562.5 812.5V625ZM750 625H625V812.5H750V625Z",
-        "width": 1000
-      },
-      "search": [
-        "shop"
-      ]
-    },
-    {
-      "uid": "54026d00d73ac8ba288eee0e239568a0",
-      "css": "play-circle",
-      "code": 59446,
-      "src": "custom_icons",
-      "selected": true,
-      "svg": {
-        "path": "M500 937.5A437.5 437.5 0 1 1 500 62.5 437.5 437.5 0 0 1 500 937.5ZM500 1000A500 500 0 1 0 500 0 500 500 0 0 0 500 1000ZM391.9 315.9A31.3 31.3 0 0 1 424.4 318.3L643.2 474.6A31.3 31.3 0 0 1 643.2 525.4L424.4 681.7A31.3 31.3 0 0 1 375 656.3V343.8A31.3 31.3 0 0 1 391.9 315.9Z",
-        "width": 1000
-      },
-      "search": [
-        "play-circle-round"
-      ]
-    },
-    {
-      "uid": "5408be43f7c42bccee419c6be53fdef5",
-      "css": "doc-text",
-      "code": 61686,
-      "src": "fontawesome"
+      "uid": "2a3cd95de2621bd87479396f236fd2a4",
+      "css": "heart-2",
+      "code": 59436,
+      "src": "websymbols"
     }
   ]
 }
