--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,6 +1,6 @@
 {
   "name": "chinaexpress_frontend",
-  "version": "v1.5.2",
+  "version": "v1.5.4",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.3",
@@ -36,6 +36,7 @@
     "sass": "^1.49.9",
     "sass-loader": "^12.6.0",
     "sweetalert2": "^11.4.8",
+    "swiper": "^8.3.0",
     "tiny-slider-react": "^0.5.4",
     "web-vitals": "^2.1.4"
   },
