--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,11 +3,15 @@
   "version": "v1.5.8",
   "private": true,
   "dependencies": {
+    "@ant-design/icons": "^4.7.0",
+    "@craco/craco": "^6.4.5",
     "@testing-library/jest-dom": "^5.16.3",
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
+    "antd": "^4.22.2",
     "axios": "^0.26.1",
     "bootstrap": "4.6.*",
+    "craco-less": "^2.0.0",
     "html-react-parser": "^1.4.9",
     "jquery": "^3.6.0",
     "lodash": "^4.17.21",
@@ -42,15 +46,19 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "start": "craco start",
+    "build": "craco build",
+    "test": "craco test"
   },
   "eslintConfig": {
     "extends": [
       "react-app",
       "react-app/jest"
+    ]
+  },
+  "jest": {
+    "transformIgnorePatterns": [
+      "/node_modules/(?!antd|@ant-design|rc-.+?|@babel/runtime).+(js|jsx)$"
     ]
   },
   "browserslist": {
